--- a/dolphinscheduler-service/src/main/resources/registry.properties
+++ b/dolphinscheduler-service/src/main/resources/registry.properties
@@ -16,12 +16,12 @@
 #
 
 #registry.plugin.dir config the Registry Plugin dir.
-registry.plugin.dir=lib/plugin/registry
+registry.plugin.dir=E:/project/ideaworkspace/dolphinscheduler/dolphinscheduler-dist/target/dolphinscheduler-dist-1.3.6-SNAPSHOT/lib/plugin/registry/zookeeper
 
 registry.plugin.name=zookeeper
 registry.servers=127.0.0.1:2181
 
-#maven.local.repository=/usr/local/localRepository
+maven.local.repository=E:/Java/apache-maven-3.8.1-bin/apache-maven-3.8.1/repo
 
 #registry.plugin.binding config the Registry Plugin need be load when development and run in IDE
-#registry.plugin.binding=./dolphinscheduler-registry-plugin/dolphinscheduler-registry-zookeeper/pom.xml
+registry.plugin.binding=E:/project/ideaworkspace/dolphinscheduler/dolphinscheduler-registry-plugin/dolphinscheduler-registry-zookeeper/pom.xml
